<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManDangNhap">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="#E91E63"
        android:text="@string/ng_nh_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/taikhoan"
        android:drawableRight="@drawable/ic_taikhoan"
        android:hint="@string/taikhoan"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_taikhoan"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/matkhau"
        android:drawableRight="@drawable/ic_matkhau"
        android:hint="@string/matkhau"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_matkhau" />

    <Button
        android:id="@+id/dangnhap"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dangnhap"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#9C27B0"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/dangky"
        android:text="@string/dangky"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#E91E63"
        app:iconTint="@color/black" />
</LinearLayout>