<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".ManDangBai">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/dangbai"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dbtieude"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/tentruyen"
        android:padding="10dp"
        android:textColor="#000000"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/dbnoidung"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/noidung"
        android:singleLine="false"
        android:textColor="#000000"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/dbimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/linkanh"
        android:padding="10dp"
        android:textColor="#000000"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/dbdangbai"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dangbai"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#E91E63"
        app:iconTint="@color/black" />

</LinearLayout>